k8s/namespace-3-data/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  namespace: namespace-3-data
spec:
  ports:
  - port: 3306
  clusterIP: None
  selector:
    app: mysql
