k8s/namespace-3-data/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: namespace-3-data
spec:
  ports:
  - port: 6379
  selector:
    app: redis
